# phoenix_compiler

./: Cargo.toml  README.md  notes.txt
.cargo/: config.toml
src/: ast.rs  codegen.rs  lexer.rs  lib.rs  location.rs  main.rs  parser.rs  symbol_table.rs  token.rs  typechecker.rs  types.rs  utils.rs
src/phoenix_runtime/: Cargo.toml
src/phoenix_runtime/src/: lib.rs  prints.rs  string.rs  vector.rs
src/tests/: codegen_tests.rs  mod.rs  parser_tests.rs
src/toylang_runtime/: Cargo.toml
src/toylang_runtime/src/: lib.rs
