[package]
name = "toylang_compiler"
version = "0.1.0"
edition = "2021"
default-run = "toylang_compiler"

# Add this lib section
[lib]
crate-type = ["staticlib", "rlib"] # Compile as a static library
# Optionally specify a name if different from the package name
# name = "toylang_runtime"

# Keep the binary target for the compiler itself
[[bin]]
name = "toylang_compiler"
path = "src/bin/main.rs"

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm15-0"] } # Adjust LLVM version as needed
# libc = "0.2" # Add if you choose the libc::printf wrapper later
clap = { version = "4.4", features = ["derive"] }
